<resources>
    <!-- App name. -->
    <string name="app_name">DBMS Example</string>

    <!-- MainActivity. -->
    <string name="activity_main">Users</string>
    <string name="action_add">Add user</string>

    <!-- AddUserActivity and ModifyUserActivity. -->
    <string name="activity_add">Add User</string>
    <string name="activity_modify">Modify User</string>

    <string name="hint_first_name">First name:</string>
    <string name="hint_last_name">Last name:</string>
    <string name="hint_username">Username:</string>
    <string name="hint_password">Password:</string>
    <string name="hint_role">Role:</string>

    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_save">Save</string>

    <string name="format_full_name">%1$s %2$s</string>

    <string name="toast_add_successful">User saved successfully.</string>
    <string name="toast_add_failed">User not saved.</string>
    <string name="toast_delete_successful">User deleted successfully.</string>
    <string name="toast_delete_failed">User not deleted.</string>
    <string name="toast_modify_successful">User modified successfully.</string>
    <string name="toast_modify_failed">User not modified.</string>
    <string name="toast_invalid">User has invalid attributes.</string>
    <string name="toast_changed">User changed by another user.</string>

    <array name="spinner_options">
        <item>Host</item>
        <item>Waiter</item>
        <item>Cook</item>
        <item>Busboy</item>
        <item>Manager</item>
    </array>

</resources>
